# trabalho1-forca-HappyHoland

./: CMakeLists.txt  README.md  author.md
data/: palavras.txt  scores.txt  word_list.txt
data/tests/: score_test1.txt  score_test2.txt  score_test3.txt  score_test4.txt  score_test5.txt  words_test1.txt  words_test2.txt  words_test3.txt  words_test4.txt
include/: Forca.hpp  sort.hpp
src/: Forca.cpp  main.cpp  sort.cpp
tests/: main.cpp
